@@ -2616,7 +2616,11 @@ int read_config(
     FILE *server_file;
     /* no $pbsserver parameters in config, use server_name as last-resort */
 
-    if ((server_file = fopen(path_server_name,"r")) != NULL)
+    if (
+#if !defined(DEBUG) && !defined(NO_SECURITY_CHECK)
+        !chk_file_sec(path_server_name, 0, 0, S_IWGRP|S_IWOTH, 1) &&
+#endif
+        (server_file = fopen(path_server_name,"r")) != NULL)
       {
       char tmpLine[PBS_MAXSERVERNAME + 1];
       char *pn;
@@ -6026,7 +6030,6 @@ int main(
   c |= chk_file_sec(path_aux,         1, 0, S_IWGRP|S_IWOTH, 1);
   c |= chk_file_sec(path_spool,       1, 1, S_IWOTH,         0);
   c |= chk_file_sec(PBS_ENVIRON,      0, 0, S_IWGRP|S_IWOTH, 0);
-  c |= chk_file_sec(path_server_name, 0, 0, S_IWGRP|S_IWOTH, 0);
 
   if (c)
     {
